--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "jquery": "^3.7.0",
     "lodash": "^4.17.21",
     "mongoose": "^7.2.2",
     "mongoose-encryption": "^2.1.2",
