--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^7.2.2",
     "mongoose-encryption": "^2.1.2",
+    "mysql": "^2.18.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0"
