--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "alert": "^5.1.4",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
@@ -17,10 +17,9 @@
     "jquery": "^3.7.0",
     "lodash": "^4.17.21",
     "mongoose": "^7.2.2",
-    "mongoose-encryption": "^2.1.2",
     "mysql": "^2.18.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^8.0.0"
+    "req-flash": "^0.0.3"
   }
 }
