--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jquery": "^3.7.0",
     "lodash": "^4.17.21",
     "mongoose": "^7.2.2",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
