--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "jquery": "^3.7.0",
     "lodash": "^4.17.21",
@@ -26,6 +27,7 @@
     "passport-local": "^1.0.0",
     "postcss": "^8.4.24",
     "postcss-cli": "^10.1.0",
+    "sweetalert2": "^11.7.16",
     "tailwindcss": "^3.3.2"
   }
 }
