successfully integrate tailwind

--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,4 @@ dist
 .VSCodeCounter/2023-07-07_07-34-15/results.json
 .VSCodeCounter/2023-07-07_07-34-15/results.md
 .VSCodeCounter/2023-07-07_07-34-15/results.txt
+ecommerce-demo.zip
